<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:onClick="getExternalFilesDir_Btn"

        android:id="@+id/externalFilesDir_BTN"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="368dp"
        android:text="@string/externalFilesDir_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="getExternalStoragePublicDir_Btn"

        android:id="@+id/externalPublicStorageDirectory_BTN"
        android:layout_width="310dp"
        android:layout_height="62dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="560dp"
        android:text="@string/storageExternalPublicStorageDirectory_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="getFilesDir_Btn"

        android:id="@+id/filesDir_BTN"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="304dp"
        android:text="@string/filesDir_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="getExternalStorageDir_Btn"

        android:id="@+id/externalStorageDirectory_BTN"
        android:layout_width="309dp"
        android:layout_height="61dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="488dp"
        android:text="@string/externalStorageDirectory_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="getCacheDir_Btn"

        android:id="@+id/cacheDir_BTN"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="304dp"
        android:text="@string/cacheDir_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="getExternalCacheDir_Btn"

        android:id="@+id/externalCacheDir_BTN"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="428dp"
        android:text="@string/externalCacheDir_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/absolute_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="Absolute:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:text="Name:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/path_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="128dp"
        android:text="Path:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/readWrite_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="184dp"
        android:text="Read/Write:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/external_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="248dp"
        android:text="External:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>